--- a/templates/barhorizontal28/index.html
+++ b/templates/barhorizontal28/index.html
@@ -26,7 +26,7 @@ Chart.defaults.scale = {
 
 		// grid line settings
 		gridLines: {
-			display: false,
+			display: true,
 			color: "rgba(0, 0, 0, 0.1)",
 			lineWidth: 1,
 			drawBorder: true,
@@ -50,6 +50,7 @@ Chart.defaults.scale = {
 		// label settings
 		ticks: {
 			beginAtZero: true,
+      maxTicksLimit: 6,
       minRotation: 0,
 			maxRotation: 50,
 			mirror: false,
@@ -103,7 +104,7 @@ var myChart = new Chart(ctx, {
         }],
         yAxes: [{
           ticks:{
-              maxTicksLimit: 6
+              maxTicksLimit: 4
           }
         }]
       },
