--- a/templates/barhorizontal29/index.html
+++ b/templates/barhorizontal29/index.html
@@ -90,7 +90,7 @@ var myChart = new Chart(ctx, {
         display: true,
         padding: 20,
         position: 'bottom',
-        text: 'Rate of HPD Lead Litigation Cases per 1,000 units'
+        text: 'Responses to 311 "Complaints Regarding Parking Permit Improper Use"'
       },
       scales:{
         xAxes: [{
