update size of chart

--- a/templates/bar12/index.html
+++ b/templates/bar12/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="bar12" max-width="400" height="400"></canvas>
+<canvas id="bar12" width="600" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
