--- a/templates/doughnut30/index.html
+++ b/templates/doughnut30/index.html
@@ -23,7 +23,7 @@ var ctx = document.getElementById("doughnut26");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Buildings","On-road Transportation","Fugutive Emissions","Transit","Streetlights"],
+        labels: ["Buildings","On-road Transportation","Fugitive Emissions","Transit","Streetlights"],
         datasets: [{
             label: 'Commcercial Eviction by Borough, 2018',
             backgroundColor:["#A07952","#BE4BDB","#F59F00","#82C91E","#2F56A6"],
