add title to chart

--- a/templates/barhorizontal30/index.html
+++ b/templates/barhorizontal30/index.html
@@ -86,11 +86,11 @@ var myChart = new Chart(ctx, {
         }]
     },
     options: {
-      /*title:{
+      title:{
         display: true,
         padding: 20,
         position: 'bottom',
-        text: 'Responses to 311 Complaints Regarding "Parking Permit Improper Use"'
+        text: 'Greenhouse Gas Emissions Per Square Foot'
       },*/
       scales:{
         xAxes: [{
