updated text on charts

--- a/templates/barhorizontal30/index.html
+++ b/templates/barhorizontal30/index.html
@@ -73,7 +73,7 @@ var ctx = document.getElementById("barhorizontal30");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Hospital","Senior Care Facility","Mercantile","Assembly","DCAS","Hotel","Business","Education","Institutional","Residential","Factory","House of Worship","Storage"
+        labels: ["Hospital","Senior Care Facility","Mercantile","Assembly","City Owned Buildings (DCAS)","Hotel","Business","Education","Institutional","Residential","Factory","House of Worship","Storage"
         ],
         datasets: [{
             label: 'Use and Greenhouse Gas Emissions',
