--- a/templates/doughnut31/index.html
+++ b/templates/doughnut31/index.html
@@ -26,7 +26,7 @@ var myChart = new Chart(ctx, {
         labels: ["Residential","Business","Institutional","Education","Hospital","City Owned Buildings (DCAS)","Hotel","Mercantile","Storage","Assembly","Factory","Senior Care Facility","Other","House of Worship"],
         datasets: [{
             label: 'Greenhouse Gas Emissions by Building Use Type',
-            backgroundColor:["#23417D","#D05D4E","#FFFFFF","#A07952","#F59F00","#2F56A6","#228AE6","#CACACA","#82C91E","#BE4BDB","#666666","#E6E6E6","#12B886","#222222"],
+            backgroundColor:["#23417D","#D05D4E","#A07952","#F59F00","#2F56A6","#228AE6","#CACACA","#82C91E","#BE4BDB","#666666","#E6E6E6","#12B886","#FFFFFF","#222222"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
