--- a/templates/doughnut31/index.html
+++ b/templates/doughnut31/index.html
@@ -23,7 +23,7 @@ var ctx = document.getElementById("doughnut31");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Residential","Business","Institutional","Hospital","Education","Hotel","Mercantile","DCAS","Storage","Factory","Senior Care Facility","Assembly","Other","House of Worship"],
+        labels: ["Residential","Business","Institutional","Hospital","Education","Hotel","Mercantile","City Owned Building (DCAS)","Storage","Factory","Senior Care Facility","Assembly","Other","House of Worship"],
         datasets: [{
             label: 'Greenhouse Gas Emissions by Building Use Type',
             backgroundColor:["#23417D","#D05D4E","#A07952","#F59F00","#2F56A6","#228AE6","#CACACA","#82C91E","#BE4BDB","#666666","#E6E6E6","#12B886","#222222"],
