forgot closing html tag

--- a/templates/doughnut35.html
+++ b/templates/doughnut35.html
@@ -10,12 +10,12 @@
     <body>
 
 
-<canvas id="doughnut26" width=auto height="200"></canvas>
+<canvas id="doughnut35" width=auto height="200"></canvas>
 <script>
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.legend.display= false
-var ctx = document.getElementById("doughnut26");
+var ctx = document.getElementById("doughnut35");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
@@ -43,3 +43,4 @@ var myChart = new Chart(ctx, {
 });
 </script>
     </body>
+</html>
