--- a/templates/barhorizontal31.html
+++ b/templates/barhorizontal31.html
@@ -73,7 +73,7 @@ var ctx = document.getElementById("barhorizontal31");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Assault (3rd)","Petty Larceny","Controlled Susbtance Possesion","Driving with Suspended License","Marijuana Possesion","Theft of Services","Property Damage","Assault (2nd)","Contempt of Court (2nd)","Weapon Possesion (4th)"
+        labels: ["Assault (3rd)","Petty Larceny","Controlled Substance Possesion","Driving with Suspended/No License","Marijuana Possesion","Theft of Services","Property Damage","Assault (2nd)","Contempt of Court (2nd)","Weapon Possesion (4th)"
         ],
         datasets: [{
             label: 'Top Criminal Court Arraignments of 2018',
