--- a/templates/doughnut37.html
+++ b/templates/doughnut37.html
@@ -22,7 +22,7 @@ var myChart = new Chart(ctx, {
         labels: ["Black","Hispanic","White","Asian","Other", "Amerindian"],
         datasets: [{
             label: 'Stop, Question & Frisk By Race, 2013',
-            backgroundColor:["#2ed7fd","#2ed7fd","#fdab49","#BE4BDB","#12B886", "D05D4E"],
+            backgroundColor:["#2ed7fd","#2ed7fd","#fdab49","#BE4BDB","#12B886", "#D05D4E"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
