--- a/templates/barhorizontal31.html
+++ b/templates/barhorizontal31.html
@@ -98,7 +98,7 @@ var myChart = new Chart(ctx, {
           ticks: {
             beginAtZero: true,
             callback: function(value) {
-              return value.toLocaleString('en-US')+' ';
+              return value.toLocaleString('en-US')+'%';
             }
           }
         }],
