--- a/templates/stackedbar16.html
+++ b/templates/stackedbar16.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="stackedbar16" width=auto max-height="600"></canvas>
+<canvas id="stackedbar16" width="150" height="150"></canvas>
 <script>
 Chart.defaults.global.responsive = true
 Chart.defaults.global.tooltips.backgroundColor="grey"
