--- a/templates/barhorizontal32.html
+++ b/templates/barhorizontal32.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Driving with a Suspended License</title>
+        <title>Rate of Arrest Per Population, 2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -71,7 +71,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [10.949968561,6.848370016,6.220935473,4.694555112, 1.113309598, 1.080643675, 0.758580377]
+            data: [27.5736, 14.3946, 14.0518, 4.4736, 2.2642, 2.0724, 0.758580377]
         }]
     },
     options: {
