--- a/templates/stackedbar16.html
+++ b/templates/stackedbar16.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Population Demographic Breakdowns, 2018</title>
+        <title>Population Male Demographic Breakdowns, 2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -28,7 +28,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#2ed7fd",
             hoverBorderColor: "#eeeeee",
-            data: [47.5416678485896,26.2701435915638]
+            data: [47.4764485,20.3745443581953]
         },
         {
           label: 'Hispanic (White)',
@@ -37,7 +37,7 @@ var myChart = new Chart(ctx, {
           borderWidth: 1,
           hoverBackgroundColor: "#02b4dc",
           hoverBorderColor: "#eeeeee",
-          data: [25.3828417209338,12.7408016399321]
+          data: [25.5113968,10.8512751017787]
       },
       {
         label: 'White',
@@ -46,7 +46,7 @@ var myChart = new Chart(ctx, {
         borderWidth: 1,
         hoverBackgroundColor: "#12B886",
         hoverBorderColor: "#eeeeee",
-        data: [12.0300843285124,38.2674818779763]
+        data: [11.5721800 ,34.9081510818787]
     },
     {
         label: 'Hispanic (Black)',
@@ -55,7 +55,7 @@ var myChart = new Chart(ctx, {
         borderWidth: 1,
         hoverBackgroundColor: "#2e70fd",
         hoverBorderColor: "#eeeeee",
-        data: [8.6800419819024,2.7249132658590]
+        data: [9.0268353,1.98225912373926]
     },
     {
       label: 'Asian',
@@ -64,17 +64,8 @@ var myChart = new Chart(ctx, {
       borderWidth: 1,
       hoverBackgroundColor: "#fdab49",
       hoverBorderColor: "#eeeeee",
-      data: [5.3741697835662,16.5935442998125]
+      data: [5.3601323,14.5020981487369]
   },
-  {
-    label: 'Other',
-    backgroundColor:"#D05D4E",
-    borderColor: "#eeeeee",
-    borderWidth: 1,
-    hoverBackgroundColor: "#D05D4E",
-    hoverBorderColor: "#eeeeee",
-    data: [0.7046962187921,3.1933319533506]
-},
 {
     label: 'Amerindian',
     backgroundColor:"#BE4BDB",
@@ -82,7 +73,7 @@ var myChart = new Chart(ctx, {
     borderWidth: 1,
     hoverBackgroundColor: "#BE4BDB",
     hoverBorderColor: "#eeeeee",
-    data: [0.2864981177033,0.2097833715057]
+    data: [0.2956939,0.397728601505965]
 },
 
       ]
