--- a/templates/stackedbar16.html
+++ b/templates/stackedbar16.html
@@ -101,7 +101,7 @@ var myChart = new Chart(ctx, {
         display: true,
         padding: 10,
         position: 'bottom',
-        text: 'Population Demographics, 2018'
+        text: 'Male Population Demographics, 2018'
       },
       tooltips: {
             callbacks: {
