missing other for full 100%

--- a/templates/stackedbar16.html
+++ b/templates/stackedbar16.html
@@ -75,6 +75,15 @@ var myChart = new Chart(ctx, {
     hoverBorderColor: "#eeeeee",
     data: [0.2956939,0.397728601505965]
 },
+{
+    label: 'Other',
+    backgroundColor:"#D05D4E",
+    borderColor: "#eeeeee",
+    borderWidth: 1,
+    hoverBackgroundColor: "#D05D4E",
+    hoverBorderColor: "#eeeeee",
+    data: [0.7573131,16.9839435841652]
+},
 
       ]
     },
