--- a/templates/barhorizontal32.html
+++ b/templates/barhorizontal32.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Rate of Arrest Per Population, 2018</title>
+        <title>Rate of Arrest Per Male Population, 2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -79,7 +79,7 @@ var myChart = new Chart(ctx, {
         display: true,
         padding: 10,
         position: 'bottom',
-        text: 'Rate of Arrest per Population, 2018'
+        text: 'Rate of Arrest per Male Population, 2018'
       },
       scales:{
         xAxes: [{
