--- a/templates/linechartmulti21/index.html
+++ b/templates/linechartmulti21/index.html
@@ -30,20 +30,20 @@ var myChart = new Chart(ctx, {
             {
               label: "National Average",
               fill: false,
-              backgroundColor: "#82C91E",
-              borderColor: "#82C91E",
+              backgroundColor: "#000080",
+              borderColor: "#000080",
               borderWidth: 0,
-              hoverBackgroundColor: "#82C91E",
+              hoverBackgroundColor: "#000080",
               hoverBorderColor: "#eeeeee",
               data: [73.36,73.61,74.36,74.56,74.61,74.77,75.21,75.62,75.62,76.03,76.58,76.64,76.94,77.49,77.69,78.04,78.54,78.74,78.84,78.69]
             },
             {
               label: "Heart Island Average",
               fill: false,
-              backgroundColor: "#BE4BDB",
-              borderColor: "#BE4BDB",
+              backgroundColor: "#FF0000",
+              borderColor: "#FF0000",
               borderWidth: 0,
-              hoverBackgroundColor: "#BE4BDB",
+              hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
               data: [60,63,60,58.5,56,52,52,55,55,60,60,62,62,63,65,63,64,65,65,65]
             }
