--- a/templates/line15/index.html
+++ b/templates/line15/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Number of People Burried at Heart Island Over Time</title>
+        <title>Number of People Buried at Heart Island Over Time</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -25,7 +25,7 @@ var myChart = new Chart(ctx, {
     data: {
         labels: ["1978","1980","1982","1984","1986","1988","1990","1992","1994","1996","1998","2000","2002","2004","2006","2008","2010","2012","2014","2016"],
         datasets: [{
-            label: 'People Burried at Hart Island',
+            label: 'People Buried at Hart Island',
             fill: false,
             lineTension: .5,
             backgroundColor:"#000080",
