--- a/templates/linechartmulti22/index.html
+++ b/templates/linechartmulti22/index.html
@@ -30,8 +30,8 @@ var myChart = new Chart(ctx, {
             {
               label: "Nursing Facility",
               fill: false,
-              backgroundColor: "#222222",
-              borderColor: "#222222",
+              backgroundColor: "#90dac2",
+              borderColor: "#90dac2",
               borderWidth: 0,
               hoverBackgroundColor: "#000080",
               hoverBorderColor: "#eeeeee",
@@ -40,8 +40,8 @@ var myChart = new Chart(ctx, {
             {
               label: "Public Hospital",
               fill: false,
-              backgroundColor: "#666666",
-              borderColor: "#666666",
+              backgroundColor: "#97c5f1",
+              borderColor: "#97c5f1",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
@@ -50,8 +50,8 @@ var myChart = new Chart(ctx, {
             {
               label: "Private Hospital",
               fill: false,
-              backgroundColor: "#CACACA",
-              borderColor: "#CACACA",
+              backgroundColor: "#dea9ed",
+              borderColor: "#dea9ed",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
@@ -60,8 +60,8 @@ var myChart = new Chart(ctx, {
             {
               label: "Residential/Other",
               fill: false,
-              backgroundColor: "#E6E6E6",
-              borderColor: "#E6E6E6",
+              backgroundColor: "#f8cd8a",
+              borderColor: "#f8cd8a",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
