changed line tension

--- a/templates/line12/index.html
+++ b/templates/line12/index.html
@@ -50,6 +50,7 @@ var data = {
     datasets: [{
         label: "Delays Per Month Sept 2015 - Sept 2018",
         fillColor: "rgba(255,255,255,0.2)",
+        lineTension: 0,
         strokeColor: "#82C91E",
           pointColor: "#82C91E",
           pointStrokeColor: "#82C91E",
