--- a/templates/line15/index.html
+++ b/templates/line15/index.html
@@ -27,7 +27,7 @@ var myChart = new Chart(ctx, {
         datasets: [{
             label: 'People Buried at Hart Island',
             fill: false,
-            lineTension: .5,
+            lineTension: 0,
             backgroundColor:"#000080",
             borderColor: "#000080",
             borderWidth: 3,
