--- a/templates/linechartmulti22/index.html
+++ b/templates/linechartmulti22/index.html
@@ -59,6 +59,7 @@ var myChart = new Chart(ctx, {
             },
             {
               label: "Residential/Other",
+              lineTension: 0,
               fill: false,
               backgroundColor: "#f8cd8a",
               borderColor: "#f8cd8a",
@@ -70,6 +71,7 @@ var myChart = new Chart(ctx, {
           ]
         },
     options: {
+
       tooltips: {
         callbacks: {
           label: function(tooltipItem, data) {
