--- a/templates/linechartmulti22/index.html
+++ b/templates/linechartmulti22/index.html
@@ -29,9 +29,11 @@ var myChart = new Chart(ctx, {
         datasets: [
             {
               label: "Nursing Facility",
+              lineTension: 0,
+              pointRadius: 4,
               fill: false,
-              backgroundColor: "#90dac2",
-              borderColor: "#90dac2",
+              backgroundColor: "#12B886",
+              borderColor: "#12B886",
               borderWidth: 0,
               hoverBackgroundColor: "#000080",
               hoverBorderColor: "#eeeeee",
@@ -39,9 +41,11 @@ var myChart = new Chart(ctx, {
             },
             {
               label: "Public Hospital",
+              lineTension: 0,
+              pointRadius: 4,
               fill: false,
-              backgroundColor: "#97c5f1",
-              borderColor: "#97c5f1",
+              backgroundColor: "#BE4BDB",
+              borderColor: "#BE4BDB",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
@@ -49,9 +53,11 @@ var myChart = new Chart(ctx, {
             },
             {
               label: "Private Hospital",
+              lineTension: 0,
+              pointRadius: 4,
               fill: false,
-              backgroundColor: "#dea9ed",
-              borderColor: "#dea9ed",
+              backgroundColor: "#FF0000",
+              borderColor: "#FF0000",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
@@ -60,9 +66,10 @@ var myChart = new Chart(ctx, {
             {
               label: "Residential/Other",
               lineTension: 0,
+                pointRadius: 4,
               fill: false,
-              backgroundColor: "#f8cd8a",
-              borderColor: "#f8cd8a",
+              backgroundColor: "#000080",
+              borderColor: "#000080",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
