--- a/templates/doughnut40.html
+++ b/templates/doughnut40.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="doughnut40" width=400 height=400></canvas>
+<canvas id="doughnut40" width=auto height=auto></canvas>
 <script>
 Chart.defaults.global.title = true
 Chart.defaults.global.responsive = true
@@ -53,8 +53,9 @@ var myChart = new Chart(ctx, {
                 fontSize: 15,
                 fontFamily: "Open Sans",
                 boxWidth: 25,
-                fontStyle: "bold",
-                padding: 15
+                fontStyle: "normal",
+                padding: 15,
+                fontColor: "#222222"
                 
             } 
     }
