--- a/templates/doughnut40.html
+++ b/templates/doughnut40.html
@@ -27,7 +27,7 @@ var ctx = document.getElementById("doughnut40");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Full Accessibility","Partial Accessibility","In Construction","No ADA - No Funding Plans","No ADA - Under Consideration"],
+        labels: ["Full Accessibility","Partial Accessibility","Construction in Progress","No ADA - No Funding Plans","No ADA - Under Consideration"],
         datasets: [{
             label: 'ADA Accessibility Status of Station Platforms, 2019',
             backgroundColor:["#228AE6","#82C91E","#BE4BDB","#666666","#D05D4E"],
