changed point size

--- a/templates/linechartmulti23/index.html
+++ b/templates/linechartmulti23/index.html
@@ -29,24 +29,48 @@ var myChart = new Chart(ctx, {
         datasets: [
             {
               label: "Detained",
-              lineTension: 0,
-              pointRadius: 0,
               fill: false,
-              backgroundColor: "#F59F00",
+              lineTension: 0.5,
+              backgroundColor:"#F59F00",
               borderColor: "#F59F00",
-              borderWidth: 0,
+              borderWidth: 3,
+              borderCapStyle: 'butt',
+              borderDash: [],
+              borderDashOffset: 0.0,
+          //    borderJoinStyle: 'miter',
+              pointBorderColor: "#F59F00",
+              pointBackgroundColor: "#F59F00",
+              pointBorderWidth: 1,
+              pointHoverRadius: 6,
+              pointHoverBackgroundColor: "#F59F00",
+              pointHoverBorderColor: "#F59F00",
+              pointHoverBorderWidth: 2,
+              pointRadius: 1,
+              pointHitRadius: 4,
               hoverBackgroundColor: "#F59F00",
               hoverBorderColor: "#F59F00",
               data: [6209,6199,6253,6180,6219,6151,6152,6232,6208,6215,6129,6156,6200,6323,6374,6239,6195,6206,6277,6219,6273,6182,6217,6140,6104,6132,5988,5847,5912,5998,6021,6112,6143,6076,6013,6013,5970,5918,5817,5748,5704,5658,5687,5617,5602,5555,5553,5491,5427,5410,5395,5365,5360,5300,5331,5321,5332,5334,5336,5381,5375,5413,5452,5599,5570,5463,5470,5516,5454,5408,5384,5402,5418,5407,5383,5368,5154,5230,5308,5337,5350,5432,5335,5343,5322,5284,5230,5249,5188,5120,5135,5122,5086,5027,4990,5002,4960,4924,4873]
             },
             {
               label: "Sentenced",
-              lineTension: 0,
-              pointRadius: 0,
               fill: false,
-              backgroundColor: "#12B886",
+              lineTension: 0.5,
+              backgroundColor:"#12B886",
               borderColor: "#12B886",
-              borderWidth: 0,
+              borderWidth: 3,
+              borderCapStyle: 'butt',
+              borderDash: [],
+              borderDashOffset: 0.0,
+          //    borderJoinStyle: 'miter',
+              pointBorderColor: "#12B886",
+              pointBackgroundColor: "#12B886",
+              pointBorderWidth: 1,
+              pointHoverRadius: 6,
+              pointHoverBackgroundColor: "#12B886",
+              pointHoverBorderColor: "#12B886",
+              pointHoverBorderWidth: 2,
+              pointRadius: 1,
+              pointHitRadius: 4,
               hoverBackgroundColor: "#12B886",
               hoverBorderColor: "#12B886",
               data: [2784,2816,2775,2786,2747,2829,2890,2798,2810,2827,2828,2787,2765,2791,2798,2816,2763,2778,2748,2799,2782,2810,2806,2762,2801,2812,2805,2775,2577,2569,2689,2673,2721,2777,2782,2794,2787,2802,2858,2871,2805,2764,2735,2748,2770,2829,2776,2775,2757,2703,2710,2689,2651,2693,2622,2674,2686,2625,2615,2607,2579,2560,2551,2516,2572,2593,2605,2599,2618,2627,2655,2661,2599,2589,2606,2578,2560,2397,2419,2559,2597,2638,2663,2673,2677,2670,2658,2677,2677,2658,2612,2585,2616,2646,2609,2618,2647,2598,2555]
