update to line colors

--- a/templates/linechartmulti22/index.html
+++ b/templates/linechartmulti22/index.html
@@ -32,8 +32,8 @@ var myChart = new Chart(ctx, {
               lineTension: 0,
               pointRadius: 4,
               fill: false,
-              backgroundColor: "#12B886",
-              borderColor: "#12B886",
+              backgroundColor: "#007534",
+              borderColor: "#007534",
               borderWidth: 0,
               hoverBackgroundColor: "#000080",
               hoverBorderColor: "#eeeeee",
@@ -44,8 +44,8 @@ var myChart = new Chart(ctx, {
               lineTension: 0,
               pointRadius: 4,
               fill: false,
-              backgroundColor: "#BE4BDB",
-              borderColor: "#BE4BDB",
+              backgroundColor: "#8744BC",
+              borderColor: "#8744BC",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
@@ -56,8 +56,8 @@ var myChart = new Chart(ctx, {
               lineTension: 0,
               pointRadius: 4,
               fill: false,
-              backgroundColor: "#FF0000",
-              borderColor: "#FF0000",
+              backgroundColor: "#B63F26",
+              borderColor: "#B63F26",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
@@ -68,8 +68,8 @@ var myChart = new Chart(ctx, {
               lineTension: 0,
                 pointRadius: 4,
               fill: false,
-              backgroundColor: "#000080",
-              borderColor: "#000080",
+              backgroundColor: "#1D5FD6",
+              borderColor: "#1D5FD6",
               borderWidth: 0,
               hoverBackgroundColor: "#FF0000",
               hoverBorderColor: "#eeeeee",
