--- a/templates/barhorizontal33/index.html
+++ b/templates/barhorizontal33/index.html
@@ -73,16 +73,15 @@ var ctx = document.getElementById("barhorizontal33");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Hospital","Senior Care Facility","Mercantile","Assembly","City Owned Buildings (DCAS)","Hotel","Business","Education","Institutional","Residential","Factory","House of Worship","Storage"
-        ],
+        labels: ["2012","2015","2018"],
         datasets: [{
-            label: 'Use and Greenhouse Gas Emissions',
-            backgroundColor: ["#F59F00","#12B886","#82C91E","#666666","#228AE6","#2F56A6","#D05D4E","#CACACA","#A07952","#23417D","#E6E6E6","#222222","#BE4BDB",],
+            label: 'Film Permits by Year',
+            backgroundColor: "#8744BC",
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [0.0153,0.0086,0.0078,0.0076,0.0076,0.0073,0.0068,0.0056,0.0054,0.0053,0.0041,0.0035,0.0028]
+            data: [10801,12090,12566]
         }]
     },
     options: {
@@ -90,7 +89,7 @@ var myChart = new Chart(ctx, {
         display: true,
         padding: 20,
         position: 'bottom',
-        text: 'Greenhouse Gas Emissions Per Square Foot'
+        text: 'Film Permits by Year'
       },
       scales:{
         xAxes: [{
@@ -131,7 +130,7 @@ var myChart = new Chart(ctx, {
 				},
 				label: function(tooltipItem, data) {
 					var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
-					return tooltipItem.xLabel.toLocaleString('en-US')+' GHG Intensity (tCO2e/ft2)';
+					return tooltipItem.xLabel.toLocaleString('en-US')+' Film Permits by Year';
 				}
         }
       }
