--- a/templates/bar21/index.html
+++ b/templates/bar21/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Film Permits by Hour 2018</title>
+        <title>Film Permits by Month, 2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -97,16 +97,19 @@ var myChart = new Chart(ctx, {
         },
         */
           {
-            label: 'Film Permits by Hour 2018',
+            label: 'Film Permits by Month, 2018',
             backgroundColor:"#2F56A6",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [21871, 20713, 19379, 18663, 18319, 17456, 29573, 39861, 43527, 45483, 46996, 47880, 48546, 48880, 49261, 49514, 49727, 49631, 48611, 46102, 42241, 36144, 29934, 19563],
-            labels: ["12:00 AM","1:00 AM","2:00 AM","3:00 AM","4:00 AM","5:00 AM","6:00 AM","7:00 AM","8:00 AM","9:00 AM","10:00 AM","11:00 AM","12:00 PM","1:00 PM","2:00 PM","3:00 PM","4:00 PM","5:00 PM","6:00 PM","7:00 PM","8:00 PM","9:00 PM","10:00 PM","11:00 PM"]
+            data: [10801,12090,12566]
+          }],
+      labels: [
+            "2012","2015","2018"
+      ]
     },
-    options:{
+    options: {
       scales:{
         xAxes: [{
           display: true
