--- a/templates/line17/index.html
+++ b/templates/line17/index.html
@@ -25,7 +25,7 @@
     const data = await getData();
     const ctx = document.getElementById('chart').getContext('2d');
     const myChart = new Chart(ctx, {
-      type: 'line',
+      type: 'bar',
       data: {
         labels: data.xs,
         datasets: [{
