--- a/templates/line17/index.html
+++ b/templates/line17/index.html
@@ -49,7 +49,7 @@
               //min: 200000,
               //stepSize: 200000,
               callback: function(value, index, values) {
-                return '$' + (value< 1000000) ? '$' + value/1000 + 'K' : '$'+ value/1000000 + 'M';
+                return '' + value.toLocaleString('en-US')+'';
               },
               beginAtZero: true,
             },
@@ -58,7 +58,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Donations'
+              labelString: 'Average Hours'
             }
           }],
           xAxes: [{
