--- a/templates/line17/index.html
+++ b/templates/line17/index.html
@@ -32,11 +32,11 @@
           label: 'Average Hours',
           data: data.ys,
           fill: false,
-          backgroundColor: '#fcb846',
+          backgroundColor: '#f8b104',
           borderColor: '#fcb846',
           borderWidth: 1,
           lineTension: 4,
-          hoverBackgroundColor: '#fa5047',
+          hoverBackgroundColor: '#E6E6E6',
           barPercentage: .8
         }]
       },
