--- a/templates/line17/index.html
+++ b/templates/line17/index.html
@@ -7,8 +7,8 @@
   <title>Total Donations Per Year</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
-    <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
-  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>
+  <!--  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>-->
+  <!-- <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>-->
 
 </head>
 <body>
@@ -25,7 +25,7 @@
     const data = await getData();
     const ctx = document.getElementById('chart').getContext('2d');
     const myChart = new Chart(ctx, {
-      type: 'bar',
+      type: 'line',
       data: {
         labels: data.xs,
         datasets: [{
