update color and style

--- a/templates/line17/index.html
+++ b/templates/line17/index.html
@@ -32,12 +32,25 @@
           label: 'Average Hours',
           data: data.ys,
           fill: false,
-          backgroundColor: '#f8b104',
-          borderColor: '#fcb846',
-          borderWidth: 1,
-          lineTension: 4,
-          hoverBackgroundColor: '#E6E6E6',
-          barPercentage: .8
+          lineTension: 0.5,
+          backgroundColor:"#f8b104",
+          borderColor: "#f8b104",
+          borderWidth: 3,
+          borderCapStyle: 'butt',
+          borderDash: [],
+          borderDashOffset: 0.0,
+          //    borderJoinStyle: 'miter',
+          pointBorderColor: "#f8b104",
+          pointBackgroundColor: "#f8b104",
+          pointBorderWidth: 1,
+          pointHoverRadius: 6,
+          pointHoverBackgroundColor: "#E6E6E6",
+          pointHoverBorderColor: "#E6E6E6",
+          pointHoverBorderWidth: 2,
+          pointRadius: 1,
+          pointHitRadius: 4,
+          hoverBackgroundColor: "#E6E6E6",
+          hoverBorderColor: "#E6E6E6",
         }]
       },
       options: {
