--- a/templates/line17/index.html
+++ b/templates/line17/index.html
@@ -67,7 +67,7 @@
               beginAtZero: true,
             },
             gridLines: {
-              display: false
+              display: true
             },
             scaleLabel: {
               display: true,
@@ -82,7 +82,7 @@
               fontStyle: 'strong'
             },
             gridLines: {
-              display: false
+              display: true
             }
           }]
         },
