--- a/templates/line17/index.html
+++ b/templates/line17/index.html
@@ -92,9 +92,9 @@
               return ''+ data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Average Hours';
             },
           },
-          backgroundColor: '#434343',
-          borderColor: '#f5f5f5',
-          borderWidth: 1,
+        //  backgroundColor: '#434343',
+        //  borderColor: '#f5f5f5',
+        //  borderWidth: 1,
           displayColors: false
         }
       }
