--- a/templates/line17/index.html
+++ b/templates/line17/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Total Donations Per Year</title>
+  <title>Average hours a taxicab was on the road per month</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <!--  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>-->
@@ -67,7 +67,7 @@
               beginAtZero: true,
             },
             gridLines: {
-              display: false
+              display: true
             },
             scaleLabel: {
               display: true,
@@ -82,7 +82,7 @@
               fontStyle: 'strong'
             },
             gridLines: {
-              display: false
+              display: true
             }
           }]
         },
