--- a/templates/line18/index.html
+++ b/templates/line18/index.html
@@ -71,7 +71,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Average Revenue'
+              labelString: 'Average Monthly Revenue'
             }
           }],
           xAxes: [{
