--- a/templates/line18/index.html
+++ b/templates/line18/index.html
@@ -33,15 +33,15 @@
           data: data.ys,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#f8b104",
-          borderColor: "#f8b104",
+          backgroundColor:"#222222",
+          borderColor: "#222222",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#f8b104",
-          pointBackgroundColor: "#f8b104",
+          pointBorderColor: "#222222",
+          pointBackgroundColor: "#222222",
           pointBorderWidth: 1,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#E6E6E6",
