--- a/templates/line18/index.html
+++ b/templates/line18/index.html
@@ -79,7 +79,7 @@
               callback: function(value, index, values) {
                 return value;
               },
-              fontStyle: 'strong'
+            //  fontStyle: 'strong'
             },
             gridLines: {
               display: true
