--- a/templates/line11/index.html
+++ b/templates/line11/index.html
@@ -32,7 +32,7 @@ var ctx = document.getElementById("line11");
 var myChart = new Chart(ctx, {
     type: 'line',
     data: {
-  labels: ["Sep 2015","Oct 2015","Nov 2015","Dec 2015","Jan 2016","Feb 2016","Mar 2016","Apr 2016","May 2016","Jun 2016","Sep 2016","Oct 2016","Nov 2016","Dec 2016","Jan 2017","Feb 2017","Mar 2017","Apr 2017","May 2017","Jun 2017","Sep 2017","Oct 2017","Nov 2017","Dec 2017","Jan 2018","Feb 2018","Mar 2018","Apr 2018","May 2018","Jun 2018","Sep 2018","Oct 2018","Nov 2018","Dec 2018","Jan 2019",","Feb 2019","Mar 2019","Apr 2019","May 2019","Jun 2019","Sep 2019","Oct 2019","Nov 2019","Dec 2019","Jan 2020"],
+  labels: ["Sep 2015","Oct 2015","Nov 2015","Dec 2015","Jan 2016","Feb 2016","Mar 2016","Apr 2016","May 2016","Jun 2016","Sep 2016","Oct 2016","Nov 2016","Dec 2016","Jan 2017","Feb 2017","Mar 2017","Apr 2017","May 2017","Jun 2017","Sep 2017","Oct 2017","Nov 2017","Dec 2017","Jan 2018","Feb 2018","Mar 2018","Apr 2018","May 2018","Jun 2018","Sep 2018","Oct 2018","Nov 2018","Dec 2018","Jan 2019","Feb 2019","Mar 2019","Apr 2019","May 2019","Jun 2019","Sep 2019","Oct 2019","Nov 2019","Dec 2019","Jan 2020"],
         datasets: [{
             label: 'Delays Per Month Sept 2015 – Jan 2020',
             pointBackgroundColor: ['red', "#82C91E", "#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E"],
@@ -116,7 +116,7 @@ var myChart = new Chart(ctx, {
               else if (value === 1369) return 'Jun 2019';
               else if (value === 1461) return 'Sep 2019';
               else if (value === 1491) return 'Oct 2019';
-              else if (value === 1522) return 'Noc 2019';
+              else if (value === 1522) return 'Nov 2019';
               else if (value === 1552) return 'Dec 2019';
               else if (value === 1583) return 'Jan 2020';
               else
@@ -174,7 +174,7 @@ var myChart = new Chart(ctx, {
              borderWidth: 1,
              onClick: function(e) {
                console.log("Box", e.type, this);
-             }
+             },
            {
              drawTime: "beforeDatasetsDraw",
              type: "box",
@@ -191,7 +191,6 @@ var myChart = new Chart(ctx, {
                console.log("Box", e.type, this);
              }
            }
-
            ]
          }
        }
